Se actualiza el proyecto con JPA, se agrega dependencias de H2 y Mysql , application.propertie, tambien se agregan nuevas funcionalidades en Curso, se actualizo la coleccion de postman. Las interfaces de repository solo cuentan con la extencion a jpa.